--- a/archives/toutiao-search/2024-03-22.md
+++ b/archives/toutiao-search/2024-03-22.md
@@ -1,59 +1,72 @@
 # 2024-03-22
 
-共 137 条
+共 149 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Mar 22 2024 09:37:23 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Mar 22 2024 10:12:20 GMT+0800 (China Standard Time) -->
+1. [最高检检察长谈未成年故意杀人](https://so.toutiao.com/search?keyword=最高检检察长谈未成年故意杀人)
 1. [张琳芃：是时候结束国家队生涯了](https://so.toutiao.com/search?keyword=张琳芃：是时候结束国家队生涯了)
-1. [最高检检察长谈未成年犯故意杀人罪](https://so.toutiao.com/search?keyword=最高检检察长谈未成年犯故意杀人罪)
 1. [经济“新动能”投资增长势头良好](https://so.toutiao.com/search?keyword=经济“新动能”投资增长势头良好)
-1. [热议国足平新加坡：无语至极](https://so.toutiao.com/search?keyword=热议国足平新加坡：无语至极)
-1. [女子给每个不送上门的快递员打电话](https://so.toutiao.com/search?keyword=女子给每个不送上门的快递员打电话)
-1. [网飞版《三体》好看吗](https://so.toutiao.com/search?keyword=网飞版《三体》好看吗)
-1. [张琳芃妻子晒聊天记录：想骂就骂吧](https://so.toutiao.com/search?keyword=张琳芃妻子晒聊天记录：想骂就骂吧)
-1. [世预赛日本对朝鲜将不在平壤举行](https://so.toutiao.com/search?keyword=世预赛日本对朝鲜将不在平壤举行)
 1. [保安曝移动营业厅厕所接水给客户喝](https://so.toutiao.com/search?keyword=保安曝移动营业厅厕所接水给客户喝)
-1. [3人在高速上抱骨灰盒碰瓷获刑](https://so.toutiao.com/search?keyword=3人在高速上抱骨灰盒碰瓷获刑)
-1. [学生厕所遭群殴被逼下跪？3人被拘](https://so.toutiao.com/search?keyword=学生厕所遭群殴被逼下跪？3人被拘)
-1. [曝马克龙曾称乌可能很快就会崩溃](https://so.toutiao.com/search?keyword=曝马克龙曾称乌可能很快就会崩溃)
-1. [媒体人辟谣“3名初中生嫌犯改过年龄”](https://so.toutiao.com/search?keyword=媒体人辟谣“3名初中生嫌犯改过年龄”)
-1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
-1. [加息涨薪之下的日本普通上班族](https://so.toutiao.com/search?keyword=加息涨薪之下的日本普通上班族)
-1. [亚洲最大苹果旗舰店开幕现场](https://so.toutiao.com/search?keyword=亚洲最大苹果旗舰店开幕现场)
-1. [开封王婆：想给孩子做点事](https://so.toutiao.com/search?keyword=开封王婆：想给孩子做点事)
-1. [英国2名空姐嘲讽中国人被开除](https://so.toutiao.com/search?keyword=英国2名空姐嘲讽中国人被开除)
+1. [张琳芃妻子晒聊天记录：想骂就骂吧](https://so.toutiao.com/search?keyword=张琳芃妻子晒聊天记录：想骂就骂吧)
+1. [女子给每个不送上门的快递员打电话](https://so.toutiao.com/search?keyword=女子给每个不送上门的快递员打电话)
 1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
-1. [国足2-2战平新加坡](https://so.toutiao.com/search?keyword=国足2-2战平新加坡)
-1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
-1. [引爆AI概念的KiMi是什么来头](https://so.toutiao.com/search?keyword=引爆AI概念的KiMi是什么来头)
-1. [预制菜不允许添加防腐剂](https://so.toutiao.com/search?keyword=预制菜不允许添加防腐剂)
-1. [北大研究生立遗嘱财产全部赠母校](https://so.toutiao.com/search?keyword=北大研究生立遗嘱财产全部赠母校)
-1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
-1. [外媒：以色列埃拉特港“基本瘫痪”](https://so.toutiao.com/search?keyword=外媒：以色列埃拉特港“基本瘫痪”)
-1. [护理学等被列为国控专业](https://so.toutiao.com/search?keyword=护理学等被列为国控专业)
+1. [兄弟官员同日被查](https://so.toutiao.com/search?keyword=兄弟官员同日被查)
+1. [热议国足平新加坡：无语至极](https://so.toutiao.com/search?keyword=热议国足平新加坡：无语至极)
+1. [英国2名空姐嘲讽中国人被开除](https://so.toutiao.com/search?keyword=英国2名空姐嘲讽中国人被开除)
+1. [学生厕所遭群殴被逼下跪？3人被拘](https://so.toutiao.com/search?keyword=学生厕所遭群殴被逼下跪？3人被拘)
+1. [17年果粉排队2天2夜就为见一次库克](https://so.toutiao.com/search?keyword=17年果粉排队2天2夜就为见一次库克)
+1. [媒体人辟谣“3名初中生嫌犯改过年龄”](https://so.toutiao.com/search?keyword=媒体人辟谣“3名初中生嫌犯改过年龄”)
+1. [亚洲最大苹果旗舰店开幕现场](https://so.toutiao.com/search?keyword=亚洲最大苹果旗舰店开幕现场)
 1. [曝胡塞告诉中俄“其船不会被攻击”](https://so.toutiao.com/search?keyword=曝胡塞告诉中俄“其船不会被攻击”)
+1. [网飞版《三体》好看吗](https://so.toutiao.com/search?keyword=网飞版《三体》好看吗)
 1. [苹果新店赠品礼盒二手价卖到399元](https://so.toutiao.com/search?keyword=苹果新店赠品礼盒二手价卖到399元)
-1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
+1. [加息涨薪之下的日本普通上班族](https://so.toutiao.com/search?keyword=加息涨薪之下的日本普通上班族)
+1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
+1. [世预赛日本对朝鲜将不在平壤举行](https://so.toutiao.com/search?keyword=世预赛日本对朝鲜将不在平壤举行)
+1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
+1. [黄健翔赛后评国足：都别生气了](https://so.toutiao.com/search?keyword=黄健翔赛后评国足：都别生气了)
 1. [凯特王妃失踪引发的英王室危机](https://so.toutiao.com/search?keyword=凯特王妃失踪引发的英王室危机)
-1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
-1. [秦始皇帝陵1号墓取得重大考古收获](https://so.toutiao.com/search?keyword=秦始皇帝陵1号墓取得重大考古收获)
-1. [基辅遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=基辅遭俄军数枚高超音速导弹袭击)
+1. [北大研究生立遗嘱财产全部赠母校](https://so.toutiao.com/search?keyword=北大研究生立遗嘱财产全部赠母校)
 1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
+1. [国足主帅伊万：战胜泰国我们能出线](https://so.toutiao.com/search?keyword=国足主帅伊万：战胜泰国我们能出线)
+1. [41岁三胎宝妈生“龙宝”](https://so.toutiao.com/search?keyword=41岁三胎宝妈生“龙宝”)
+1. [3人在高速上抱骨灰盒碰瓷获刑](https://so.toutiao.com/search?keyword=3人在高速上抱骨灰盒碰瓷获刑)
+1. [外媒：以色列埃拉特港“基本瘫痪”](https://so.toutiao.com/search?keyword=外媒：以色列埃拉特港“基本瘫痪”)
+1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
+1. [预制菜不允许添加防腐剂](https://so.toutiao.com/search?keyword=预制菜不允许添加防腐剂)
+1. [美联储利率不变对中国市场有何影响](https://so.toutiao.com/search?keyword=美联储利率不变对中国市场有何影响)
+1. [护理学等被列为国控专业](https://so.toutiao.com/search?keyword=护理学等被列为国控专业)
+1. [国足2-2战平新加坡](https://so.toutiao.com/search?keyword=国足2-2战平新加坡)
+1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
+1. [小车撞上电线杆断成两截](https://so.toutiao.com/search?keyword=小车撞上电线杆断成两截)
+1. [基辅遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=基辅遭俄军数枚高超音速导弹袭击)
+1. [黄仁勋：英伟达向中企“交芯”](https://so.toutiao.com/search?keyword=黄仁勋：英伟达向中企“交芯”)
 1. [医院称2名医学生先后自杀情况属实](https://so.toutiao.com/search?keyword=医院称2名医学生先后自杀情况属实)
+1. [女子问丈夫要2万生活费被拒后争执](https://so.toutiao.com/search?keyword=女子问丈夫要2万生活费被拒后争执)
+1. [曝马克龙曾称乌可能很快就会崩溃](https://so.toutiao.com/search?keyword=曝马克龙曾称乌可能很快就会崩溃)
+1. [紧挨猪场臭气熏天 新房装好却难住](https://so.toutiao.com/search?keyword=紧挨猪场臭气熏天+新房装好却难住)
+1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
+1. [郭正亮：我主张两岸要和平统一](https://so.toutiao.com/search?keyword=郭正亮：我主张两岸要和平统一)
+1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
+1. [秦始皇帝陵1号墓取得重大考古收获](https://so.toutiao.com/search?keyword=秦始皇帝陵1号墓取得重大考古收获)
+1. [俄军宣布控制重要据点干扰乌军补给](https://so.toutiao.com/search?keyword=俄军宣布控制重要据点干扰乌军补给)
+1. [小伙跳江轻生 6旬老者下水救人](https://so.toutiao.com/search?keyword=小伙跳江轻生+6旬老者下水救人)
+1. [媒体：《与凤行》首播颇具爆款相](https://so.toutiao.com/search?keyword=媒体：《与凤行》首播颇具爆款相)
+1. [90后大开脑洞让甲骨文动起来](https://so.toutiao.com/search?keyword=90后大开脑洞让甲骨文动起来)
+1. [最高检检察长谈未成年犯故意杀人罪](https://so.toutiao.com/search?keyword=最高检检察长谈未成年犯故意杀人罪)
+1. [开封王婆：想给孩子做点事](https://so.toutiao.com/search?keyword=开封王婆：想给孩子做点事)
+1. [引爆AI概念的KiMi是什么来头](https://so.toutiao.com/search?keyword=引爆AI概念的KiMi是什么来头)
 1. [林更新戏里戏外人设统一](https://so.toutiao.com/search?keyword=林更新戏里戏外人设统一)
 1. [男子横穿马路被连撞两次](https://so.toutiao.com/search?keyword=男子横穿马路被连撞两次)
 1. [天水高颜值交警出圈](https://so.toutiao.com/search?keyword=天水高颜值交警出圈)
-1. [女子问丈夫要2万生活费被拒后争执](https://so.toutiao.com/search?keyword=女子问丈夫要2万生活费被拒后争执)
-1. [郭正亮：我主张两岸要和平统一](https://so.toutiao.com/search?keyword=郭正亮：我主张两岸要和平统一)
 1. [恒大地产的财务造假有多严重](https://so.toutiao.com/search?keyword=恒大地产的财务造假有多严重)
-1. [紧挨猪场臭气熏天 新房装好却难住](https://so.toutiao.com/search?keyword=紧挨猪场臭气熏天+新房装好却难住)
 1. [女子因摔倒致公交急刹被索赔13.5万](https://so.toutiao.com/search?keyword=女子因摔倒致公交急刹被索赔13.5万)
 1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
 1. [山西吕梁多名学生在厕所内被霸凌](https://so.toutiao.com/search?keyword=山西吕梁多名学生在厕所内被霸凌)
 1. [媒体评用中考投档震慑校园欺凌者](https://so.toutiao.com/search?keyword=媒体评用中考投档震慑校园欺凌者)
 1. [交通局回应公路中间建牌楼：会拆除](https://so.toutiao.com/search?keyword=交通局回应公路中间建牌楼：会拆除)
 1. [黄健翔：都别生气了](https://so.toutiao.com/search?keyword=黄健翔：都别生气了)
-1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
 1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
 1. [菲方34人非法登上铁线礁 中方回应](https://so.toutiao.com/search?keyword=菲方34人非法登上铁线礁+中方回应)
 1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
@@ -131,7 +144,6 @@
 1. [奥沙利文爆冷无缘世界公开赛8强](https://so.toutiao.com/search?keyword=奥沙利文爆冷无缘世界公开赛8强)
 1. [男子为徒步爬泰山把身份证存半山腰](https://so.toutiao.com/search?keyword=男子为徒步爬泰山把身份证存半山腰)
 1. [螺蛳粉还能放心吃吗](https://so.toutiao.com/search?keyword=螺蛳粉还能放心吃吗)
-1. [小伙跳江轻生 6旬老者下水救人](https://so.toutiao.com/search?keyword=小伙跳江轻生+6旬老者下水救人)
 1. [曝以向美保证称按国际法使用美武器](https://so.toutiao.com/search?keyword=曝以向美保证称按国际法使用美武器)
 1. [埃及总统塞西会见美国务卿布林肯](https://so.toutiao.com/search?keyword=埃及总统塞西会见美国务卿布林肯)
 1. [螺蛳粉被曝用增臭剂？多家品牌回应](https://so.toutiao.com/search?keyword=螺蛳粉被曝用增臭剂？多家品牌回应)
