--- a/archives/toutiao-search/2024-03-22.md
+++ b/archives/toutiao-search/2024-03-22.md
@@ -1,47 +1,68 @@
 # 2024-03-22
 
-共 192 条
+共 208 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Mar 22 2024 12:01:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Mar 22 2024 13:00:57 GMT+0800 (China Standard Time) -->
 1. [最高检检察长谈未成年故意杀人](https://so.toutiao.com/search?keyword=最高检检察长谈未成年故意杀人)
 1. [地铁回应要求无臂男子出示残疾证](https://so.toutiao.com/search?keyword=地铁回应要求无臂男子出示残疾证)
 1. [“春日经济”热力十足](https://so.toutiao.com/search?keyword=“春日经济”热力十足)
 1. [张琳芃妻子晒聊天记录：想骂就骂吧](https://so.toutiao.com/search?keyword=张琳芃妻子晒聊天记录：想骂就骂吧)
 1. [台退将：金门已无战略意义](https://so.toutiao.com/search?keyword=台退将：金门已无战略意义)
-1. [男子疑似酒后杀害女儿和外甥被抓获](https://so.toutiao.com/search?keyword=男子疑似酒后杀害女儿和外甥被抓获)
+1. [女子怒斥苹果静安店排队者崇洋媚外](https://so.toutiao.com/search?keyword=女子怒斥苹果静安店排队者崇洋媚外)
+1. [警方通报女子家门口发现三角标记](https://so.toutiao.com/search?keyword=警方通报女子家门口发现三角标记)
 1. [张琳芃：是时候结束国家队生涯了](https://so.toutiao.com/search?keyword=张琳芃：是时候结束国家队生涯了)
-1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
-1. [美方为何屡次炒作“2027大陆攻台”](https://so.toutiao.com/search?keyword=美方为何屡次炒作“2027大陆攻台”)
+1. [2023年全国考古十大新发现](https://so.toutiao.com/search?keyword=2023年全国考古十大新发现)
 1. [云南出现持枪恐怖分子？假的](https://so.toutiao.com/search?keyword=云南出现持枪恐怖分子？假的)
+1. [游族网络投毒案被告一审获死刑](https://so.toutiao.com/search?keyword=游族网络投毒案被告一审获死刑)
 1. [学生厕所遭群殴被逼下跪？3人被拘](https://so.toutiao.com/search?keyword=学生厕所遭群殴被逼下跪？3人被拘)
 1. [智障女子疑遭强奸产子 警方介入](https://so.toutiao.com/search?keyword=智障女子疑遭强奸产子+警方介入)
-1. [发现三角标记的女子家未见可疑情况](https://so.toutiao.com/search?keyword=发现三角标记的女子家未见可疑情况)
-1. [17年果粉排队2天2夜就为见1次库克](https://so.toutiao.com/search?keyword=17年果粉排队2天2夜就为见1次库克)
-1. [游族网络投毒案被告一审获死刑](https://so.toutiao.com/search?keyword=游族网络投毒案被告一审获死刑)
-1. [女子给每个不送上门的快递员打电话](https://so.toutiao.com/search?keyword=女子给每个不送上门的快递员打电话)
-1. [护理学等被列为国控专业](https://so.toutiao.com/search?keyword=护理学等被列为国控专业)
+1. [媒体：此役最大的输家就是伊万](https://so.toutiao.com/search?keyword=媒体：此役最大的输家就是伊万)
+1. [小米SU7陷入空间小争议](https://so.toutiao.com/search?keyword=小米SU7陷入空间小争议)
 1. [无人机画面曝光以军射击平民](https://so.toutiao.com/search?keyword=无人机画面曝光以军射击平民)
-1. [网飞版《三体》好看吗](https://so.toutiao.com/search?keyword=网飞版《三体》好看吗)
-1. [2023年全国考古十大新发现](https://so.toutiao.com/search?keyword=2023年全国考古十大新发现)
-1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
+1. [国足赛后被喊“丢人”](https://so.toutiao.com/search?keyword=国足赛后被喊“丢人”)
+1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
+1. [17年果粉排队2天2夜就为见1次库克](https://so.toutiao.com/search?keyword=17年果粉排队2天2夜就为见1次库克)
 1. [曝胡塞告诉中俄“其船不会被攻击”](https://so.toutiao.com/search?keyword=曝胡塞告诉中俄“其船不会被攻击”)
+1. [网飞版《三体》好看吗](https://so.toutiao.com/search?keyword=网飞版《三体》好看吗)
+1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
+1. [郑恺获库克亲笔签名iPhone](https://so.toutiao.com/search?keyword=郑恺获库克亲笔签名iPhone)
+1. [杨幂红毯上冷得打哆嗦](https://so.toutiao.com/search?keyword=杨幂红毯上冷得打哆嗦)
 1. [兄弟官员同日被查](https://so.toutiao.com/search?keyword=兄弟官员同日被查)
+1. [马拉多纳死亡调查四年后有新进展](https://so.toutiao.com/search?keyword=马拉多纳死亡调查四年后有新进展)
+1. [微商教母张庭换新马甲卷土重来？](https://so.toutiao.com/search?keyword=微商教母张庭换新马甲卷土重来？)
 1. [曝绿茶餐厅佛跳墙是预制菜](https://so.toutiao.com/search?keyword=曝绿茶餐厅佛跳墙是预制菜)
+1. [小车撞上电线杆断成两截](https://so.toutiao.com/search?keyword=小车撞上电线杆断成两截)
+1. [美方为何屡次炒作“2027大陆攻台”](https://so.toutiao.com/search?keyword=美方为何屡次炒作“2027大陆攻台”)
+1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
+1. [东契奇34+9+8+4断 独行侠击败爵士](https://so.toutiao.com/search?keyword=东契奇34+9+8+4断+独行侠击败爵士)
+1. [女生手机被偷打开丢失模式后找到](https://so.toutiao.com/search?keyword=女生手机被偷打开丢失模式后找到)
 1. [媒体人：颜骏凌已证明了他不堪重用](https://so.toutiao.com/search?keyword=媒体人：颜骏凌已证明了他不堪重用)
+1. [女子给每个不送上门的快递员打电话](https://so.toutiao.com/search?keyword=女子给每个不送上门的快递员打电话)
+1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
+1. [男子60个小时没睡只为拿到库克签名](https://so.toutiao.com/search?keyword=男子60个小时没睡只为拿到库克签名)
+1. [山区小学校长霸气喊话反对校园霸凌](https://so.toutiao.com/search?keyword=山区小学校长霸气喊话反对校园霸凌)
+1. [护理学等被列为国控专业](https://so.toutiao.com/search?keyword=护理学等被列为国控专业)
+1. [3人在高速上抱骨灰盒碰瓷获刑](https://so.toutiao.com/search?keyword=3人在高速上抱骨灰盒碰瓷获刑)
+1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
+1. [李毅：新加坡这队来中超踢就保级队](https://so.toutiao.com/search?keyword=李毅：新加坡这队来中超踢就保级队)
+1. [移动营业厅被曝厕所接水给客户喝](https://so.toutiao.com/search?keyword=移动营业厅被曝厕所接水给客户喝)
+1. [美记者：美国禁止泽连斯基与俄和谈](https://so.toutiao.com/search?keyword=美记者：美国禁止泽连斯基与俄和谈)
+1. [新加坡男足队长为广告兼职房产中介](https://so.toutiao.com/search?keyword=新加坡男足队长为广告兼职房产中介)
+1. [男子驾车顶撞推行前车致多人倒地](https://so.toutiao.com/search?keyword=男子驾车顶撞推行前车致多人倒地)
+1. [亿万富豪覃辉：从老板到囚犯](https://so.toutiao.com/search?keyword=亿万富豪覃辉：从老板到囚犯)
+1. [媒体：伊万或高估国足实力](https://so.toutiao.com/search?keyword=媒体：伊万或高估国足实力)
+1. [王楚钦发文退出WTT仁川冠军赛](https://so.toutiao.com/search?keyword=王楚钦发文退出WTT仁川冠军赛)
+1. [41岁三胎宝妈生“龙宝”](https://so.toutiao.com/search?keyword=41岁三胎宝妈生“龙宝”)
+1. [男子疑似酒后杀害女儿和外甥被抓获](https://so.toutiao.com/search?keyword=男子疑似酒后杀害女儿和外甥被抓获)
+1. [发现三角标记的女子家未见可疑情况](https://so.toutiao.com/search?keyword=发现三角标记的女子家未见可疑情况)
 1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
 1. [南京发生伤人事件 警方介入](https://so.toutiao.com/search?keyword=南京发生伤人事件+警方介入)
 1. [以军称在加沙打死多名巴武装人员](https://so.toutiao.com/search?keyword=以军称在加沙打死多名巴武装人员)
-1. [女生手机被偷打开丢失模式后找到](https://so.toutiao.com/search?keyword=女生手机被偷打开丢失模式后找到)
 1. [加息涨薪之下的日本普通上班族](https://so.toutiao.com/search?keyword=加息涨薪之下的日本普通上班族)
 1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
-1. [移动营业厅被曝厕所接水给客户喝](https://so.toutiao.com/search?keyword=移动营业厅被曝厕所接水给客户喝)
-1. [国足赛后被喊“丢人”](https://so.toutiao.com/search?keyword=国足赛后被喊“丢人”)
-1. [小车撞上电线杆断成两截](https://so.toutiao.com/search?keyword=小车撞上电线杆断成两截)
 1. [持股市值上亿女子称生活困难](https://so.toutiao.com/search?keyword=持股市值上亿女子称生活困难)
-1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
 1. [20架次解放军军机在台海周边活动](https://so.toutiao.com/search?keyword=20架次解放军军机在台海周边活动)
-1. [41岁三胎宝妈生“龙宝”](https://so.toutiao.com/search?keyword=41岁三胎宝妈生“龙宝”)
 1. [深度体验零跑C10](https://so.toutiao.com/search?keyword=深度体验零跑C10)
 1. [韩乔生：错不是张琳芃一人](https://so.toutiao.com/search?keyword=韩乔生：错不是张琳芃一人)
 1. [陕西榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=陕西榆林一女中学生遭多名同学围殴)
@@ -49,9 +70,7 @@
 1. [午评：A股三大指数震荡下挫跌超1%](https://so.toutiao.com/search?keyword=午评：A股三大指数震荡下挫跌超1%)
 1. [《追风者》魏若来是七宝街团宠吧](https://so.toutiao.com/search?keyword=《追风者》魏若来是七宝街团宠吧)
 1. [医院称2名医学生先后自杀情况属实](https://so.toutiao.com/search?keyword=医院称2名医学生先后自杀情况属实)
-1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
 1. [林更新戏里戏外人设统一](https://so.toutiao.com/search?keyword=林更新戏里戏外人设统一)
-1. [李毅：新加坡这队来中超踢就保级队](https://so.toutiao.com/search?keyword=李毅：新加坡这队来中超踢就保级队)
 1. [纽约金价21日上涨](https://so.toutiao.com/search?keyword=纽约金价21日上涨)
 1. [邱国正被批发表危险言论](https://so.toutiao.com/search?keyword=邱国正被批发表危险言论)
 1. [经济“新动能”投资增长势头良好](https://so.toutiao.com/search?keyword=经济“新动能”投资增长势头良好)
@@ -63,7 +82,6 @@
 1. [班凯罗三双 魔术击退鹈鹕](https://so.toutiao.com/search?keyword=班凯罗三双+魔术击退鹈鹕)
 1. [商家热推一口价金饰实为高价金](https://so.toutiao.com/search?keyword=商家热推一口价金饰实为高价金)
 1. [黄仁勋：英伟达向中企“交芯”](https://so.toutiao.com/search?keyword=黄仁勋：英伟达向中企“交芯”)
-1. [小米SU7陷入空间小争议](https://so.toutiao.com/search?keyword=小米SU7陷入空间小争议)
 1. [亚洲最大苹果旗舰店开幕现场](https://so.toutiao.com/search?keyword=亚洲最大苹果旗舰店开幕现场)
 1. [今年降准仍有空间](https://so.toutiao.com/search?keyword=今年降准仍有空间)
 1. [外媒：以色列埃拉特港“基本瘫痪”](https://so.toutiao.com/search?keyword=外媒：以色列埃拉特港“基本瘫痪”)
@@ -71,13 +89,11 @@
 1. [凯特王妃失踪引发的英王室危机](https://so.toutiao.com/search?keyword=凯特王妃失踪引发的英王室危机)
 1. [摩萨德局长将前往多哈推进停火谈判](https://so.toutiao.com/search?keyword=摩萨德局长将前往多哈推进停火谈判)
 1. [大熊猫渝可渝爱同步起床太萌了](https://so.toutiao.com/search?keyword=大熊猫渝可渝爱同步起床太萌了)
-1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
 1. [人民币汇率步入阶段性盘整](https://so.toutiao.com/search?keyword=人民币汇率步入阶段性盘整)
 1. [英国2名空姐嘲讽中国人被开除](https://so.toutiao.com/search?keyword=英国2名空姐嘲讽中国人被开除)
 1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
 1. [开盘：A股三大指数低开沪指跌0.21%](https://so.toutiao.com/search?keyword=开盘：A股三大指数低开沪指跌0.21%)
 1. [曝马克龙曾称乌可能很快就会崩溃](https://so.toutiao.com/search?keyword=曝马克龙曾称乌可能很快就会崩溃)
-1. [3人在高速上抱骨灰盒碰瓷获刑](https://so.toutiao.com/search?keyword=3人在高速上抱骨灰盒碰瓷获刑)
 1. [记者：张玉宁这两年沉重很多](https://so.toutiao.com/search?keyword=记者：张玉宁这两年沉重很多)
 1. [保安曝移动营业厅厕所接水给客户喝](https://so.toutiao.com/search?keyword=保安曝移动营业厅厕所接水给客户喝)
 1. [热议国足平新加坡：无语至极](https://so.toutiao.com/search?keyword=热议国足平新加坡：无语至极)
